public static class PlayerAnimationFlag
{
  public const string isGrounded = "isGrounded";
  public const string isIdled = "isIdled";
  public const string isWalking = "isWalking";
  public const string isRunning = "isRunning";
  public const string isAired = "isAired";
  public const string velocityY = "velocityY";
}
